--- a/html5_css/ccs/styles.css
+++ b/html5_css/ccs/styles.css
@@ -35,7 +35,23 @@ nav a {
 }
 
 nav a:hover {
-    color: chocolate;
+    color: #592918;
     text-decoration: none;
+}
+main h2 {
+    color: #592918;
+    text-align: center;
+}
 
+main img {
+    display: block;
+    margin: 20px auto;
+    width: 600px;
+
+}
+
+footer {
+    padding: 40px 0;
+    text-align: center;
+    border-top: 4px solid #592918;
 }
