--- a/avd_css/ccs/styles.css
+++ b/avd_css/ccs/styles.css
@@ -1,3 +1,11 @@
 body {
-    background-color:#B3310D ;
+    background-color: #010D00;
+}
+
+#container {
+    background-color: #590505;
+    width: 65%;
+    margin: 20px auto;
+    border: 4px solid #F25116;
+    padding: 20px;
 }
