--- a/avd_css/ccs/styles.css
+++ b/avd_css/ccs/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #0b0d17; /* deep space navy */
+    background-color: #0b0d17;
 }
 
 img {
@@ -9,16 +9,16 @@ img {
 }
 
 a {
-    color: #f1f1f1; /* moonlight white */
+    color: #f1f1f1;
 }
 
 a:hover {
-    color: #ffd700; /* lunar gold */
+    color: #ffd700;
     text-decoration: none;
 }
 
 #container {
-    background-color: #1f2a44; /* starfield blue */
+    background-color: #1f2a44;
     width: 65%;
     margin: 20px auto;
     border: 4px solid #f1f1f1;
@@ -34,7 +34,7 @@ header {
 
 header h1 {
     font-size: 50px;
-    color: #ffd700; /* Artemis gold */
+    color: #ffd700;
 }
 
 nav {
@@ -54,7 +54,7 @@ nav li {
 
 nav li a {
     display: block;
-    background-color: #003366; /* NASA blue */
+    background-color: #003366;
     color: #f1f1f1;
     width: 150px;
     height: 40px;
@@ -77,7 +77,7 @@ main h2 {
 
 .multi_col {
     display: flex;
-    flex-wrap: wrap; /* prevents overflow on smaller screens */
+    flex-wrap: wrap;
 }
 
 section,
@@ -107,7 +107,7 @@ footer {
     text-align: center;
 }
 
-.img_style { /* fixed from .img-style to match your HTML class */
+.img_style {
     width: 75%;
     border: 2px solid #f1f1f1;
     border-radius: 10px;
@@ -117,14 +117,14 @@ footer {
 }
 
 hr {
-    border: 1px solid #f1f1f1; /* added 'solid' for valid syntax */
+    border: 1px solid #f1f1f1;
 }
 
 iframe {
     display: block;
     margin: 20px auto;
     border-radius: 10px;
-    border: 2px solid #f1f1f1; /* added 'solid' for valid syntax */
+    border: 2px solid #f1f1f1;
 }
 
 .about_content {
