--- a/responsive/ccs/styles.css
+++ b/responsive/ccs/styles.css
@@ -3,51 +3,50 @@
   margin: 0;
 }
 body {
-    background-color: #F2B366;
+  background-color: #F2B366;
 }
 
 img {
-    display: block;
-    margin: 0 auto;
-    width: 100%;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
 }
 
 a {
-    color: #275D8C;
+  color: #275D8C;
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
-
 
 /* Mobile Styles */
 #container {
   padding: 10px;
-  border: 4px solid  #8C2A3C;
+  border: 4px solid #8C2A3C;
 }
 
 nav {
-    text-align: center;
+  text-align: center;
 }
 
 nav ul {
-    padding: 0;
-    list-style-type: none;
+  padding: 0;
+  list-style-type: none;
 }
 
 nav li {
-    display: block;
+  display: block;
 }
 
 nav li a {
-    display: block;
-    background-color: #0d0d0c;
-    height: 40px;
-    line-height: 40px;
-    text-decoration: none;
-    font-size: 25px;
-    border-bottom: 4px solid #8C2A3C;
+  display: block;
+  background-color: #0d0d0c;
+  height: 40px;
+  line-height: 40px;
+  text-decoration: none;
+  font-size: 25px;
+  border-bottom: 4px solid #8C2A3C;
 }
 
 nav li a:hover {
@@ -55,27 +54,28 @@ nav li a:hover {
 }
 
 main {
-    padding: 10px;
-    margin: 10px;
+  padding: 10px;
+  margin: 10px;
 }
 
 .main_content {
-    padding: 10px;
+  padding: 10px;
 }
 
 .col {
-    margin: 10px 0;
+  margin: 10px 0;
 }
 
 .col img {
-    border-radius: 10px;
-    border: 2px solid #275D8C;
+  border-radius: 10px;
+  border: 2px solid #275D8C;
 }
 
 footer {
   padding: 40px;
   text-align: center;
 }
+
 .contact_content {
   text-align: center;
 }
@@ -83,30 +83,31 @@ footer {
 section,
 aside {
   border: 4px solid #8C2A3C;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 /* Tablet Styles */
 @media (min-width: 768px) {
   nav {
     padding: 10px 0;
-    border-bottom: 4px #275D8C;
+    border-bottom: 4px solid #275D8C;
   }
-    nav li {
-        display: inline;
-    }
-}
 
-nav li a {
+  nav li {
     display: inline;
+  }
+
+  nav li a {
+    display: inline-block;
     width: 150px;
     height: 40px;
-}
+  }
 
-.col img {
-  width: 65%;
+  .col img {
+    width: 65%;
+  }
 }
 
 /* Desktop Styles */
@@ -137,17 +138,16 @@ nav li a {
     text-align: center;
     color: #8C2A3C;
   }
-}
-.mutli_col {
-  display: flex;
-}
 
+  .multi_col {
+    display: flex;
+  }
 
+  .home_section {
+    width: 70%;
+  }
 
-.home_section {
-  width: 70%;
-}
-
-.home_aside {
-  width: 30%;
+  .home_aside {
+    width: 30%;
+  }
 }
