--- a/final_project/ccs/styles.css
+++ b/final_project/ccs/styles.css
@@ -3,16 +3,14 @@
   margin: 0;
 }
 
-h2{
+h2 {
   font-family: "Metamorphous", serif;
   font-weight: 400;
   font-style: normal;
-
 }
 
-
 body {
-  background-color: #F2B366;
+  background-color: #f4efde;
 }
 
 img {
@@ -22,17 +20,22 @@ img {
 }
 
 a {
-  color: #275D8C;
+  color: #695442;
 }
 
 a:hover {
   text-decoration: none;
 }
 
+.active-link {
+  background-color: #38322b;
+  color: #f4efde;
+}
+
 /* Mobile Styles */
 #container {
   padding: 10px;
-  border: 4px solid #8C2A3C;
+  border: 4px solid #38322b;
 }
 
 nav {
@@ -50,16 +53,17 @@ nav li {
 
 nav li a {
   display: block;
-  background-color: #0d0d0c;
+  background-color: #1b1a17;
   height: 40px;
   line-height: 40px;
   text-decoration: none;
   font-size: 25px;
-  border-bottom: 4px solid #8C2A3C;
+  border-bottom: 4px solid #38322b;
+  color: #f4efde;
 }
 
 nav li a:hover {
-  background-color: gold;
+  background-color: #a78a6d;
 }
 
 main {
@@ -71,18 +75,24 @@ main {
   padding: 10px;
 }
 
-.col {
+.col,
+.col_left,
+.col_right {
   margin: 10px 0;
 }
 
-.col img {
+.col img,
+.col_left img,
+.col_right img {
   border-radius: 10px;
-  border: 2px solid #275D8C;
+  border: 2px solid #695442;
 }
 
 footer {
   padding: 40px;
   text-align: center;
+  background-color: #1b1a17;
+  color: #f4efde;
 }
 
 .contact_content {
@@ -91,17 +101,19 @@ footer {
 
 section,
 aside {
-  border: 4px solid #8C2A3C;
+  border: 4px solid #38322b;
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
+  background-color: #f4efde;
+  color: #1b1a17;
 }
 
 /* Tablet Styles */
 @media (min-width: 768px) {
   nav {
     padding: 10px 0;
-    border-bottom: 4px solid #275D8C;
+    border-bottom: 4px solid #695442;
   }
 
   nav li {
@@ -114,7 +126,9 @@ aside {
     height: 40px;
   }
 
-  .col img {
+  .col img,
+  .col_left img,
+  .col_right img {
     width: 65%;
   }
 }
@@ -124,7 +138,7 @@ aside {
   #container {
     width: 65%;
     margin: 20px auto;
-    background-color: #275D8C;
+    background-color: #38322b;
     border-radius: 10px;
   }
 
@@ -132,21 +146,29 @@ aside {
     display: flex;
   }
 
-  .col {
-    border: 4px solid #8C2A3C;
+  .col,
+  .col_left,
+  .col_right {
+    border: 4px solid #38322b;
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
     width: 33.33%;
+    background-color: #f4efde;
+    color: #1b1a17;
   }
 
-  .col img {
+  .col img,
+  .col_left img,
+  .col_right img {
     width: 75%;
   }
 
-  .col h3 {
+  .col h3,
+  .col_left h3,
+  .col_right h3 {
     text-align: center;
-    color: #8C2A3C;
+    color: #695442;
   }
 
   .multi_col {
@@ -161,3 +183,14 @@ aside {
     width: 30%;
   }
 }
+
+
+.banner {
+  width: 90%;
+  max-height: 300px;
+  object-fit: cover;
+  border-bottom: 4px solid #38322b;
+  border-radius: 10px;
+}
+
+
